# zplayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zwj/zplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zwj/zplayer/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zwj/zplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib_zplayer/: CMakeLists.txt  build.gradle  version_script.txt
lib_zplayer/src/androidTest/java/com/zwj/lib/zplayer/: ExampleInstrumentedTest.kt
lib_zplayer/src/main/: AndroidManifest.xml
lib_zplayer/src/main/cpp/: DeCode.cpp  DeCode.h  IObserver.cpp  IObserver.h  Player.cpp  Player.h  Resample.cpp  Resample.h  SLAudioPlay.cpp  SLAudioPlay.h  SendStatus.cpp  SendStatus.h  Unpacking.cpp  Unpacking.h  VideoCallback.h  VideoView.cpp  VideoView.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XLog.cpp  XLog.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h  XThread.cpp  XThread.h  zplayer.cpp
lib_zplayer/src/main/cpp/libyuv/: CMakeLists.txt
lib_zplayer/src/main/java/com/zwj/lib/zplayer/: OnProgressListen.java  ZGLSurfaceView.kt  ZPlayer.kt  ZPlayerView.kt  ZSurfaceView.kt
lib_zplayer/src/test/java/com/zwj/lib/zplayer/: ExampleUnitTest.kt
